# fringe

./: CMakeLists.txt  LICENSE2.md  README.md
.circleci/: config.yml
cmake/: ConfigProject.cmake  FindCython.cmake  FindGDAL.cmake  FindMyLinAlg.cmake  FindNumpy.cmake  useCython.cmake
docs/: TODO.md  environment_linux.yml  install.md  modules.md  opensource.md  requirements_linux.txt  workflows.md
include/fringe/: EigenLapack.hpp  args.hxx  filter.hpp  fringe_common.hpp  fringe_topofit.hpp  ulongmask.hpp
include/fringe/cuda/: cudaUtils.h  ulongmask.h
python/: CMakeLists.txt  Network.py  StackVRT.py  adjustMiniStacks.py  fit_timeseries.py  integratePS.py  makeStackVRT.py  nmap_viewer.py  plotCoherence.py  stripmap2vrt.py  tops2vrt.py  uavsar2vrt.py  unwrapStack.py  unwrap_fringe.py  unwrap_isce3.py
src/: CMakeLists.txt
src/ampdispersion/: CMakeLists.txt  ampdispersion.cpp  ampdispersion.hpp  ampdispersion.py  ampdispersionlib.pyx
src/ampdispersion/docs/: README.md
src/calamp/: CMakeLists.txt  calamp.cpp  calamp.hpp  calamp.py  calamplib.pyx
src/calamp/docs/: README.md
src/despeck/: CMakeLists.txt  despeck.cpp  despeck.hpp  despeck.py  despecklib.pyx
src/despeck/docs/: README.md
src/evd/: CMakeLists.txt  evd.cpp  evd.hpp  evd.py  evdlib.cpp  evdlib.pyx  evdtest.py
src/evd/docs/: README.md
src/fit/: CMakeLists.txt  Fit.cc  Fit.h  TimeFunction.py  fit_timeseries.py  fitlib.pxd  fitlib.pyx
src/nmap/: AD2unique.hpp  AD2unique_cuda.hpp  CMakeLists.txt  KS2sample.hpp  KS2sample_cuda.h  nmap.cpp  nmap.hpp  nmap.py  nmap_cuda.cu  nmap_cuda.h  nmaplib.pyx
src/nmap/docs/: README.md
src/phase_link/: CMakeLists.txt  phase_link.cpp  phase_link.hpp  phase_link.py  phase_linklib.pyx
src/sbas/: CMakeLists.txt  sbas.cpp  sbas.hpp  sbas.py  sbaslib.pyx
src/sequential/: CMakeLists.txt  Stack.py  sequential.py
src/timefn/: BasisFn.py  CMakeLists.txt  CenteredBasisFn.py  Collection.py  Constant.py  Exp.py  Interface.py  Log.py  Periodic.py  Polynomial.py  Power.py  Spline.py  SplineFactory.py  Trigonometry.py  __init__.py  datetimeUtils.py
src/toporesidual/: CMakeLists.txt  toporesidual.cpp  toporesidual.hpp
src/unwrap_error/: CMakeLists.txt  Unwrap.cc  Unwrap.h  unwrap_error.py  unwraplib.pxd  unwraplib.pyx
src/utils/: DesignMatrix.py
tests/AD2/: README.md  ad2R.py  ad2scipy.py  makeData.py  test_stat.cpp
tests/Fit/: build_test.sh  fit_timeseries.cc  search_tau.cc
tests/KS2/: README.md  build.sh  ks2R.py  ks2scipy.py  ks2test.m  ks2test.py  test_stat.cpp
tests/MLE/: mle.py  test_MLE_v6.py  test_Sequential.py  test_Sequential_manyRealization.py
tests/bitmask/: build.sh  test_bits.cpp
tests/eigen/: build.sh  test_eig.cpp
tests/evd/: test_evd.py
tests/filter/: build.sh  test_mat.cpp
tests/filter/matlab/: filtwin.m  testwin.m
tests/topofit/: build.sh  makeData1.py  test_fit.cpp
tests/topofit/matlab/: ps_topofit.m  test_fit.m
tests/unwrapp_err/: test_closure.py  test_closure_2Pixels.py  test_region.py
tests/wrapped_phase_velocity/: test1.py
