# Add calamp
add_subdirectory(calamp)

# Add ampdispersion
add_subdirectory(ampdispersion)

#Add nmap
add_subdirectory(nmap)

#Add despeck
add_subdirectory(despeck)

#Add evd
add_subdirectory(evd)

#Add sequential estimator
add_subdirectory(sequential)

#Add SBAS inversion
add_subdirectory(sbas)

#Add model fitting
add_subdirectory(fit)

#Add timefn
add_subdirectory(timefn)

#Add unwrapping error checks
add_subdirectory(unwrap_error)

#Add phase_link
add_subdirectory(phase_link)

